# mmc

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindLZ4.cmake  Findzstd.cmake
include/common/: app.h  argparse.h  error.h  file.h  mmc.h
src/: app.c  argparse.c  argparse.h  common.c  common.h  compress.c  decompress.c  deflate.c  error.c  file.c  inflate.c  lz4_compress.c  lz4_decompress.c  mmap_deflate.c  mmap_inflate.c  trie.c  trie.h  zlib_common.c  zlib_common.h  zstd_compress.c  zstd_decompress.c
